--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "sample": "node ./utils/GenerateSamples.js",
     "test": "jest"
   },
   "author": "",
